--- a/src/app/empleados/pages/empleado/empleado.component.html
+++ b/src/app/empleados/pages/empleado/empleado.component.html
@@ -23,6 +23,7 @@ fxLayoutGap="30px">
             <mat-list-item>{{empleado.codigoempleado}}</mat-list-item>
             <mat-list-item>{{empleado.direccion}}</mat-list-item>
             <mat-list-item>{{empleado.salario}}</mat-list-item>
+            <mat-list-item>{{empleado.antiguedad}}</mat-list-item>
         </mat-list>
 
         <br>
