--- a/src/app/empleados/pages/agregar/agregar.component.html
+++ b/src/app/empleados/pages/agregar/agregar.component.html
@@ -1,1 +1,103 @@
-<p>agregar works!</p>
+<h1>Nuevo Heroe <small></small></h1>
+
+<div fxLayout="row" fxLayoutGap="40px" fxLayout.xs="column">
+    <div fxFlex="50" fxLayout="column">
+
+        <mat-form-field fxFlex="100" fxLayout.xs="column">
+            <mat-label>ID del Empleado</mat-label>
+            <input 
+            matInput
+            type="text"
+            [(ngModel)]="empleado.idempleado"
+            required>
+        </mat-form-field>
+
+        <div fxLayout="row" 
+        fxLayout.xs="column"
+        fxLayoutGap="20px">
+            <mat-form-field fxFlex="100" fxLayout.xs="column">
+                <mat-label>Nombre de Empleado</mat-label>
+                <input 
+                matInput
+                type="text"
+                [(ngModel)]="empleado.nombre"
+                required>
+            </mat-form-field>
+    
+            <mat-form-field fxFlex="100">
+                <mat-label>Apellido</mat-label>
+                <input 
+                matInput
+                type="text"
+                [(ngModel)]="empleado.apellido"
+                required>
+            </mat-form-field>
+        </div>
+
+        <mat-form-field fxFlex="100">
+            <mat-label>Direccion</mat-label>
+            <input 
+            matInput
+            type="text"
+            [(ngModel)]="empleado.direccion"
+            required>
+        </mat-form-field>
+
+        <mat-form-field fxFlex="100">
+            <mat-label>Salario</mat-label>
+            <input 
+            matInput
+            type="text"
+            [(ngModel)]="empleado.salario"
+            required>
+        </mat-form-field>
+
+        <mat-form-field fxFlex="100">
+            <mat-label>Codigo de Empleado</mat-label>
+            <input 
+            matInput
+            type="text"
+            [(ngModel)]="empleado.codigoempleado"
+            required>
+        </mat-form-field>
+
+        <mat-form-field fxFlex="100">
+            <mat-label>Empresa</mat-label>
+            <input 
+            matInput
+            type="text"
+            [(ngModel)]="empleado.empresa"
+            required>
+        </mat-form-field>
+
+        <mat-form-field fxFlex="100">
+            <mat-label>Foto URL</mat-label>
+            <input 
+            matInput
+            type="url"
+            [(ngModel)]="empleado.alt_img"
+            required>
+        </mat-form-field>
+
+        <br>
+
+        <div fxLayout>
+        <button mat-raised-button color="warn"
+        (click)="guardar()">
+            <mat-icon>add</mat-icon>
+            Guardar
+        </button>
+
+        <span class="espacio"></span>
+
+            <button *ngIf="empleado.idempleado"  mat-raised-button color="warn">
+                <mat-icon>remove</mat-icon>
+                Borrar
+            </button>
+        </div>
+        <!-- (click)="borrarEmpleado()" -->
+    </div>
+    <div fxFlex="50">
+        <img [src]="empleado | imagen">
+    </div>
+</div>
