--- a/src/app/empleados/pages/buscar/buscar.component.html
+++ b/src/app/empleados/pages/buscar/buscar.component.html
@@ -3,20 +3,37 @@
         <h1>Buscador de Empleados</h1>
         <mat-divider></mat-divider>
     </div>
-    <div>
+    <div fxLayout="column">
         <h3>Buscador</h3>
-        <mat-form-field class="example-full-width">
+        <mat-form-field>
             <input type="text"
                    placeholder="Pick one"
                    aria-label="Number"
                    matInput
                    [(ngModel)]="termino"
-                   [matAutocomplete]="auto">
-            <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
-              <mat-option *ngFor="let empleado of empleados| async" [value]="option">
+                   [matAutocomplete]="auto"
+                   (input)="buscando()">
+
+            <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete"
+            (optionSelected)="opcionSeleccionada($event)">
+              <mat-option *ngFor="let empleado of empleados" [value]="empleado">
                 {{empleado.nombre}}
               </mat-option>
+
+              <mat-option value="" *ngIf="empleados.length == 0 && termino.trim().length > 0">
+                No se encontro nada con el termino {{termino}}
+              </mat-option>
+
             </mat-autocomplete>
+
           </mat-form-field>
     </div>
+
+      <div>
+        <pre>{{empleadoSeleccionado | json}}</pre>
+      </div>
+      <!-- <div *ngIf="empleadoSeleccionado">
+        <app-heroe-tarjeta [empleado]="empleadoSeleccionado"></app-heroe-tarjeta>
+      </div> -->
+
 </div>
