--- a/src/app/empleados/pages/buscar/buscar.component.html
+++ b/src/app/empleados/pages/buscar/buscar.component.html
@@ -32,8 +32,8 @@
       <div>
         <pre>{{empleadoSeleccionado | json}}</pre>
       </div>
-      <!-- <div *ngIf="empleadoSeleccionado">
-        <app-heroe-tarjeta [empleado]="empleadoSeleccionado"></app-heroe-tarjeta>
-      </div> -->
+      <div *ngIf="empleadoSeleccionado">
+        <app-empleado-tarjeta [empleado]="empleadoSeleccionado"></app-empleado-tarjeta>
+      </div>
 
 </div>
