--- a/src/app/empleados/pages/listado/listado.component.html
+++ b/src/app/empleados/pages/listado/listado.component.html
@@ -11,7 +11,7 @@ fxLayoutGap="20px">
     fexFlex.lg="15"
     fxFlex.sm="30" *ngFor="let empleado of empleados">
        
-    <app-heroe-tarjeta [empleado]="empleado"></app-heroe-tarjeta>
+    <app-empleado-tarjeta [empleado]="empleado"></app-empleado-tarjeta>
     </div>
 </div>
 
